[gd_scene load_steps=11 format=3 uid="uid://b1pe0xqlvuu1n"]

[ext_resource type="Script" path="res://Character.gd" id="1_jqt3u"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4wi4c"]
friction = 0.0
bounce = 0.5

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_u8e7o"]
properties/0/path = NodePath(".:sync_pos")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:sync_linear_vel")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:sync_rot")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:sync_angular_vel")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("HealthBar:value")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="Gradient" id="Gradient_ynl8l"]
colors = PackedColorArray(0.353438, 0.353438, 0.353438, 1, 0.507314, 0.507314, 0.507314, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_awqqe"]
gradient = SubResource("Gradient_ynl8l")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cjsb"]
size = Vector2(62, 60)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqpa7"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_v0bj1"]
colors = PackedColorArray(0.34902, 0, 0, 1, 0.635294, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_67kee"]
gradient = SubResource("Gradient_v0bj1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2cr76"]
texture = SubResource("GradientTexture1D_67kee")

[node name="Character" type="RigidBody2D" groups=["PlayerGroup"]]
physics_material_override = SubResource("PhysicsMaterial_4wi4c")
gravity_scale = 1.66533e-16
script = ExtResource("1_jqt3u")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_u8e7o")

[node name="NameTag" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -55.0
offset_right = 39.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Some Guy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 62.5)
texture = SubResource("GradientTexture1D_awqqe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3cjsb")

[node name="DebugLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = -70.0
offset_right = 34.0
offset_bottom = -47.0
grow_horizontal = 2
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FreeScoreTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_top = 32.0
offset_right = 35.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_yqpa7")
theme_override_styles/fill = SubResource("StyleBoxTexture_2cr76")
value = 100.0
show_percentage = false

[connection signal="timeout" from="FreeScoreTimer" to="." method="_on_free_score_timer_timeout"]
